--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -31,13 +31,17 @@ body {
   font-family: Dosis;
 }
 
+a:-webkit-any-link {
+  text-decoration: none;
+}
+
 a {
   text-decoration: none;
   color: white;
 }
 
 a:hover {
-  color: red;
+  color: $secondary;
 }
 
 #navbar {
@@ -80,6 +84,11 @@ a:hover {
   font-size: 30px;
   margin-top: 0px;
   margin-bottom: 5px;
+  line-height: 50px;
+}
+
+.nav-addtask: hover {
+  border: 0px;
 }
 
 .nav-login {
@@ -88,14 +97,15 @@ a:hover {
 
 #main {
   margin: auto;
+  min-height: 80vh;
+  max-height: 100%;
+  display : flex;
+  flex-flow : row wrap;
+  justify-content : center;
 }
 
 .new-task-main {
   margin-top: 100px;
-}
-
-#main-task-container {
-  background-color: red;
 }
 
 #newTask {
@@ -110,7 +120,7 @@ a:hover {
   height: 100%;
   float: left;
   margin: 80px 10px 20px 10px;
-
+  flex-direction: row;
 }
 
 .col-title {
@@ -191,9 +201,25 @@ a:hover {
   width: 100%;
 }
 
-// .btn-primary {
-//   display: none;}
+.btn-primary {
+  background-color: red;
+  display: none;}
 
-// .btn-default {
-//   display: none;
-// }
+.btn-default {
+  background-color: red;
+  display: none;
+}
+
+//=================================
+
+#footer {
+  min-height : 35px;
+  width : 100%;
+  background-color: $tertiary;
+  position : relative;
+  margin-top: 15px;
+  bottom : 0;
+  left : 0;
+  opacity: 0.9;
+  box-shadow : rgba(0,0,0,.2) 5px 3px 5px 5px;
+}
