--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,9 +33,6 @@ a:hover {
   left: 0;
   box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75); }
 
-#welcome-message {
-  float: left; }
-
 .nav-btn {
   height: 50px;
   line-height: 50px;
@@ -77,6 +74,17 @@ a:hover {
   flex-flow: row wrap;
   justify-content: center; }
 
+.full-bleed {
+  width: 100%;
+  height: 500px;
+  background-color: #FCFBE3;
+  text-align: center; }
+
+.welcome {
+  line-height: 500px;
+  font-size: 150px;
+  font-family: Dosis; }
+
 .new-task-main {
   margin-top: 100px; }
 
@@ -85,16 +93,16 @@ a:hover {
   width: 100%; }
 
 .taskColumn {
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.8);
   width: 31%;
   min-height: 80vh;
   height: 100%;
   float: left;
-  margin: 80px 10px 50px 10px;
+  margin: 80px 10px 30px 10px;
   flex-direction: row; }
 
 .col-title {
-  background-color: #f9e65f;
+  background-color: #faea78;
   text-align: center;
   color: #181A1B;
   font-size: 20px;
@@ -119,8 +127,18 @@ a:hover {
   -moz-box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75); }
 
+.task-details {
+  display: inline; }
+
+.task-details.hidden {
+  display: none; }
+
 .delete-button {
   margin-top: 15px;
+  float: right; }
+
+.update-status-btn {
+  margin: 15px 5px 0px 0px;
   float: right; }
 
 .registerDiv {
@@ -163,7 +181,7 @@ a:hover {
   margin-top: 8px; }
 
 #footer {
-  background-color: #313aa5;
+  background-color: #303436;
   min-height: 200px;
   width: 100%;
   margin-top: 15px;
