moved add task to default page

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,6 +1,41 @@
 
 <div class="taskColumn">
-  <div class="col-title">TO DO</div>
+  <div class="col-title" ng-submit="addTask()">TO DO
+    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      +
+      </button>
+       <div class="dropdown-menu">
+         <div id="task_form_block">
+           <form class="formTask">
+             <fieldset>
+               <div class="new_task_title">
+                 <label for="new_task_title">New Task Title</label>
+                 <div><input id="new_task_title" type="text" ng-model="new_task.title" /></div>
+               </div>
+
+               <div class="new_task_desc">
+                 <label for="new_task_desc">Description</label>
+                 <div><input id="new_task_desc" type="text" ng-model="new_task.desc" /></div>
+               </div>
+
+               <div class="new_task_priority">
+                 <label for="new_task_priority">Priority</label>
+                 <div><input id="new_task_priority" type="text" ng-model="new_task.priority" /></div>
+               </div>
+
+               <div class="new_task_assignedTo">
+                 <label for="new_task_assignedTo">Assigned To</label>
+                 <div><input id="new_task_assignedTo" type="text" ng-model="new_task.assignedTo" /></div>
+               </div>
+
+               <button type="submit">Add Task</button>
+             </fieldset>
+           </form>
+           </div>
+         </div>
+        <!-- </div> -->
+      </div> <!-- end of task form -->
+
 
   <div class="singleTask control-group" ng-repeat="task in tasksArray | filter:task.status='__status__toDo__'" ng-swith on=task.>
     <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
