--- a/public/views/tasks.html
+++ b/public/views/tasks.html
@@ -1,4 +1,4 @@
-
+<!--
   <div class="new-task-main" ng-submit="addTask()">
      <div class="btn-group">
        <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -57,4 +57,4 @@
       </fieldset>
     </form>
     </div>
-  </div>
+  </div> -->
