--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -121,7 +121,8 @@ a:hover {
 }
 
 .new-task-main {
-  margin-top: 100px;
+  // margin-top: 100px;
+  background-color: pink;
 }
 
 #newTask {
@@ -206,10 +207,6 @@ a:hover {
 }
 
 //============= task block ==============
-
-.new-task-main {
-  padding: 10%;
-}
 
 .btn-group {
   margin: 10px;
