--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,7 +86,7 @@ a:hover {
   font-family: Dosis; }
 
 .new-task-main {
-  margin-top: 100px; }
+  background-color: pink; }
 
 #newTask {
   border: 1px solid white;
@@ -149,9 +149,6 @@ a:hover {
 
 .notfound {
   margin-top: 100px; }
-
-.new-task-main {
-  padding: 10%; }
 
 .btn-group {
   margin: 10px; }
