removed register html and implemented drop down form into index html

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,4 +1,4 @@
-<div class="registerDiv">
+<!-- <div class="registerDiv">
   <form class="registerForm" ng-submit="addNewUser(newUser)" ng-model="newUser">
     <fieldset>
       <div class="firstnameForm">
@@ -42,4 +42,4 @@
       </div>
     </fieldset>
   </form>
-</div>
+</div> -->
