--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -118,6 +118,7 @@ a:hover {
   line-height: 500px;
   font-size: 150px;
   font-family: Dosis;
+  // text-shadow: 5px 5px 10px $dark;
 }
 
 .new-task-main {
