Clears form on task submit and reloads page upon login

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -10,11 +10,11 @@
       </button>
        <div class="dropdown-menu">
          <div id="task_form_block">
-           <form class="formTask">
+           <form class="formTask" name="formAddTask">
              <fieldset>
                <div class="new_task_title">
                  <!-- <label for="new_task_title">New Task Title</label> -->
-                 <div><input id="new_task_title" type="text" ng-model="new_task.title" placeholder="title" /></div>
+                 <div><input id="new_task_title" type="text" ng-model="new_task.title" placeholder="title"/></div>
                </div>
 
                <div class="new_task_desc">
