--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,5 +1,5 @@
 <div class="full-bleed">
-  <span class="welcome">yes we can.ban</span>
+  <span class="welcome">yes we kan.ban</span>
 </div>
 
 
@@ -8,7 +8,7 @@
     <button type="button" class="btn btn-secondary dropdown-toggle addtask" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       +
       </button>
-       <div class="dropdown-menu">
+       <div class="dropdown-menu newtask-form">
          <div id="task_form_block">
            <form class="formTask" name="formAddTask">
              <fieldset>
