--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,7 +28,9 @@ a:hover {
   width: 100%;
   height: 60px;
   background-color: #E9CE09;
+  z-index: 3;
   position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   box-shadow: -5px 7px 29px -2px rgba(0, 0, 0, 0.75); }
@@ -65,6 +67,7 @@ a:hover {
   justify-content: center; }
 
 .full-bleed {
+  position: fixed;
   width: 100%;
   height: 500px;
   background-color: #FCFBE3;
@@ -83,12 +86,14 @@ a:hover {
   width: 100%; }
 
 .taskColumn {
+  z-index: 2;
+  position: relative;
   background: rgba(255, 255, 255, 0.8);
   width: 31%;
   min-height: 80vh;
   height: 100%;
   float: left;
-  margin: 80px 10px 30px 10px;
+  margin: 530px 10px 30px 10px;
   flex-direction: row; }
 
 .col-title {
