--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -47,7 +47,9 @@ a:hover {
   width: 100%;
   height: 60px;
   background-color: $main;
+  z-index: 3;
   position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   box-shadow: -5px 7px 29px -2px rgba(0,0,0,0.75);
@@ -97,6 +99,8 @@ a:hover {
 }
 
 .full-bleed {
+  // z-index: 1;
+  position: fixed;
   width: 100%;
   height: 500px;
   background-color: $neutral;
@@ -120,12 +124,14 @@ a:hover {
 }
 
 .taskColumn {
+  z-index: 2;
+  position: relative;
   background:rgba(255,255,255,0.8);
   width: 31%;
   min-height: 80vh;
   height: 100%;
   float: left;
-  margin: 80px 10px 30px 10px;
+  margin: 530px 10px 30px 10px;
   flex-direction: row;
 }
 
