--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,9 +19,12 @@ a:-webkit-any-link {
 
 a {
   text-decoration: none;
-  color: white; }
+  color: #252C7E; }
 
 a:hover {
+  text-decoration: none; }
+
+.fa:hover {
   color: #B10000; }
 
 #navbar {
@@ -62,20 +65,24 @@ a:hover {
   min-height: 80vh;
   max-height: 100%;
   display: flex;
-  flex-flow: row wrap;
-  justify-content: center; }
+  flex-flow: row wrap; }
 
 .full-bleed {
+  z-index: 1;
   position: fixed;
   width: 100%;
-  height: 500px;
+  height: 200px;
   background-color: #FCFBE3;
   text-align: center; }
 
 .welcome {
-  line-height: 500px;
-  font-size: 150px;
-  font-family: Dosis; }
+  line-height: 200px;
+  font-size: 60px;
+  font-family: Dosis;
+  transition: all 1s ease; }
+  @media only screen and (min-width: 675px) {
+    .welcome {
+      font-size: 50px; } }
 
 .new-task-main {
   background-color: pink; }
@@ -88,23 +95,35 @@ a:hover {
   z-index: 2;
   position: relative;
   background: rgba(255, 255, 255, 0.8);
-  width: 31%;
+  width: 400px;
   min-height: 80vh;
   height: 100%;
-  float: left;
-  margin: 530px 10px 30px 10px;
-  flex-direction: row; }
+  top: 150px;
+  margin: auto;
+  margin-bottom: 20px;
+  flex-direction: row;
+  transition: all 1s ease; }
+  @media only screen and (min-width: 675px) {
+    .taskColumn {
+      width: 300px; } }
+  @media only screen and (min-width: 1200px) {
+    .taskColumn {
+      width: 400px; } }
 
 .col-title {
   background-color: #faea78;
-  text-align: center;
   color: #181A1B;
+  text-align: center;
   font-size: 20px;
   line-height: 40px;
-  width: 100%;
-  height: 40px;
   font-family: Montserrat;
   border-bottom: 5px solid #252C7E; }
+
+span.todo {
+  margin-left: -30px; }
+
+.cardHeader {
+  display: flex; }
 
 .new_task_title {
   color: #252C7E;
@@ -128,6 +147,13 @@ a:hover {
   max-height: 100%;
   transition: .8s; }
 
+.cardBtn {
+  display: flex;
+  float: right;
+  margin-top: 20px; }
+  .cardBtn .eachCardBtn {
+    margin: 0px 5px 0px 5px; }
+
 .task-details.hidden {
   max-height: 0; }
 
@@ -135,12 +161,7 @@ a:hover {
   color: #B10000; }
 
 .delete-button {
-  margin-top: 15px;
-  float: right; }
-
-.update-status-btn {
-  margin: 15px 5px 0px 0px;
-  float: right; }
+  margin-top: 6.5px; }
 
 .btn-group {
   margin: 10px; }
@@ -214,9 +235,8 @@ div.dropdown-menu {
 
 .addtask {
   float: left;
-  background-color: #b8a307;
   max-height: 100%;
-  font-size: 25px;
+  font-size: 35px;
   line-height: 25px; }
 
 .regFormContainer {
@@ -231,4 +251,7 @@ div.dropdown-menu {
   min-height: 200px;
   width: 100%;
   margin-top: 15px;
-  text-align: center; }
+  text-align: center;
+  color: gray;
+  line-height: 40%;
+  padding-top: 140px; }
