--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,13 +1,13 @@
 <div class="full-bleed">
-  <span class="welcome">yes we kan.ban</span>
+  <span class="welcome">yes we kanban</span>
 </div>
 
 
 <div class="taskColumn">
-  <div class="col-title" ng-submit="addTask()">TO DO
-    <button type="button" class="btn btn-secondary dropdown-toggle addtask" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <div class="col-title" ng-submit="addTask()"><span class="todo">TO DO</span>
+    <a class="btn btn-secondary dropdown-toggle addtask" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       +
-      </button>
+      </a>
        <div class="dropdown-menu newtask-form">
          <div id="task_form_block">
            <form class="formTask" name="formAddTask">
@@ -39,10 +39,15 @@
 
 
   <div class="singleTask control-group" ng-repeat="task in tasksArray | filter:task.status='__status__toDo__'" ng-swith on=task.>
-    <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
-    <button type="button" ng-click="MoveTaskInProgress(task)" class="update-status-btn">>>></button>
 
-    <a href="#" ng-click="showDetails = ! showDetails"><h3 class="new_task_title"> >> {{ task.title }}</h3></a>
+    <div class="cardBtn">
+      <div class="eachCardBtn"><i ng-click="deleteTask(task._id)" class="delete-button fa fa-times fa-lg"></i>
+      </div>
+      <div class="eachCardBtn"><i ng-click="MoveTaskInProgress(task)" class="update-status-btn fa fa-angle-double-right fa-2x"></i>
+      </div>
+    </div>
+
+    <a href="#" ng-click="showDetails = ! showDetails"><h3 class="new_task_title"> {{ task.title }}</h3></a>
 
       <div class="task-details" ng-class="{ 'hidden': ! showDetails }" ng-show="showDetails">
         <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)"><span class="form-label">DESC: </span>{{ task.desc }}</p>
@@ -50,6 +55,7 @@
         <p class"new_task_assignedTo" editable-text="task.assignedTo" onbeforesave="updateTask(task)"><span class="form-label">ASSIGNED TO: </span>{{ task.assignedTo }}</p>
         <p class"new_task_createBy"><span class="form-label">CREATED BY: </span>{{ task.createdBy.firstName }}</p>
       </div>
+
   </div>
 
 </div>
@@ -59,11 +65,17 @@
   <div class="col-title">IN PROGRESS</div>
 
   <div class="singleTask" ng-repeat="task in tasksArray | filter:task.status='__status__inProg__'">
-    <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
-    <button type="button" ng-click="MoveTaskDone(task)" class="update-status-btn">>>></button>
-    <button type="button" ng-click="MoveTaskToDo(task)" class="update-status-btn"><<<</button>
 
-    <a href="#" ng-click="showDetails = ! showDetails"><h3 class="new_task_title"> >> {{ task.title }}</h3></a>
+  <div class="cardBtn">
+    <div class="eachCardBtn"><i ng-click="MoveTaskToDo(task)" class="update-status-btn fa fa-angle-double-left fa-2x"></i>
+    </div>
+    <div class="eachCardBtn"><i ng-click="deleteTask(task._id)" class="delete-button fa fa-times fa-lg"></i>
+    </div>
+    <div class="eachCardBtn"><i ng-click="MoveTaskDone(task)" class="update-status-btn fa fa-angle-double-right fa-2x"></i>
+    </div>
+  </div>
+
+    <a href="#" ng-click="showDetails = ! showDetails"><h3 class="new_task_title"> {{ task.title }}</h3></a>
 
       <div class="task-details" ng-class="{ 'hidden': ! showDetails }" ng-show="showDetails">
         <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)"><span class="form-label">DESC: </span>{{ task.desc }}</p>
@@ -81,11 +93,19 @@
 <div class="taskColumn">
   <div class="col-title">DONE</div>
 
-  <div class="singleTask" ng-repeat="task in tasksArray | filter:task.status='__status__done__'">
-    <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
-    <button type="button" ng-click="MoveTaskInProgress(task)" class="update-status-btn"><<<</button>
 
-    <a href="#" ng-click="showDetails = ! showDetails"><h3 class="new_task_title"> >> {{ task.title }}</h3></a>
+
+
+  <div class="singleTask" ng-repeat="task in tasksArray | filter:task.status='__status__done__'">
+
+  <div class="cardBtn">
+    <div class="eachCardBtn"><i ng-click="MoveTaskInProgress(task)" class="update-status-btn fa fa-angle-double-left fa-2x"></i>
+    </div>
+    <div class="eachCardBtn"><i ng-click="deleteTask(task._id)" class="delete-button fa fa-times fa-lg"></i>
+    </div>
+  </div>
+
+    <a href="#" ng-click="showDetails = ! showDetails"><h3 class="new_task_title">  {{ task.title }}</h3></a>
 
       <div class="task-details" ng-class="{ 'hidden': ! showDetails }" ng-show="showDetails">
         <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)"><span class="form-label">DESC: </span>{{ task.desc }}</p>
