--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,9 +6,9 @@ $neutral : #FCFBE3; //creme
 $dark: #181A1B; //charcoal
 
 //MEDIA QUERY RANGES
-$large : "only screen and (max-width:1200px)";
-$medium : "only screen and (max-width:875px)";
-$mobile : "only screen and (max-width:480px)";
+$large : "only screen and (min-width:1200px)";
+$medium : "only screen and (min-width:675px)";
+$mobile : "only screen and (min-width:580px)";
 
 //fonts
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
@@ -36,10 +36,14 @@ a:-webkit-any-link {
 
 a {
   text-decoration: none;
-  color: white;
+  color: $tertiary;
 }
 
 a:hover {
+  text-decoration: none;
+}
+
+.fa:hover {
   color: $secondary;
 }
 
@@ -54,13 +58,7 @@ a:hover {
   box-shadow: -5px 7px 29px -2px rgba(0,0,0,0.75);
 }
 
-// #welcome-message {
-//   float: left;
-// }
-
 .nav-btn {
-  // background-color: $main;
-  // width: 70px;
   height: 50px;
   line-height: 50px;
   font-size: 20px;
@@ -94,23 +92,27 @@ a:hover {
   max-height: 100%;
   display : flex;
   flex-flow : row wrap;
-  justify-content : center;
+  // justify-content : center;
 }
 
 .full-bleed {
-  // z-index: 1;
+  z-index: 1;
   position: fixed;
   width: 100%;
-  height: 500px;
+  height: 200px;
   background-color: $neutral;
   text-align: center;
 }
 
 .welcome {
-  line-height: 500px;
-  font-size: 150px;
+  line-height: 200px;
+  font-size: 60px;
   font-family: Dosis;
-  // text-shadow: 5px 5px 10px $dark;
+  transition: all 1s ease;
+
+  @media #{$medium} {
+    font-size: 50px
+  }
 }
 
 .new-task-main {
@@ -126,24 +128,40 @@ a:hover {
   z-index: 2;
   position: relative;
   background:rgba(255,255,255,0.8);
-  width: 31%;
+  width: 400px;
   min-height: 80vh;
   height: 100%;
-  float: left;
-  margin: 530px 10px 30px 10px;
+  top: 150px;
+  margin: auto;
+  margin-bottom: 20px;
   flex-direction: row;
+  transition: all 1s ease;
+
+  @media #{$medium} {
+    width: 300px;
+  }
+
+  @media #{$large} {
+    width: 400px;
+  }
 }
 
 .col-title {
   background-color: lighten($main,25%);
-  text-align: center;
   color: $dark;
+  text-align: center;
   font-size: 20px;
   line-height: 40px;
-  width: 100%;
-  height: 40px;
   font-family: Montserrat;
   border-bottom: 5px solid $tertiary;
+}
+
+span.todo {
+  margin-left: -30px;
+}
+
+.cardHeader {
+  display: flex;
 }
 
 .new_task_title {
@@ -172,6 +190,20 @@ a:hover {
   transition: .8s;
 }
 
+.cardBtn {
+  // background-color: pink;
+  display: flex;
+  float: right;
+  margin-top: 20px;
+  // border-top: 1px solid gray;
+
+
+  .eachCardBtn {
+    margin: 0px 5px 0px 5px;
+
+  }
+}
+
 .task-details.hidden {
   max-height: 0;
 }
@@ -186,13 +218,13 @@ a:hover {
 }
 
 .delete-button {
-  margin-top: 15px;
-  float: right;
+  margin-top: 6.5px;
+  // float: right;
 }
 
 .update-status-btn {
-  margin: 15px 5px 0px 0px;
-  float: right;
+  // margin: 20px 5px 0px 0px;
+  // float: right;
 }
 
 .registerDiv {
@@ -296,9 +328,8 @@ div.dropdown-menu {
 
 .addtask {
   float: left;
-  background-color: darken($main,10%);
   max-height: 100%;
-  font-size: 25px;
+  font-size: 35px;
   line-height: 25px;
 }
 
@@ -320,5 +351,8 @@ div.dropdown-menu {
   width : 100%;
   margin-top: 15px;
   text-align: center;
+  color: gray;
+  line-height: 40%;
+  padding-top: 140px;
 }
 
