--- a/public/views/default.html
+++ b/public/views/default.html
@@ -5,37 +5,60 @@
 
 <div class="taskColumn">
   <div class="col-title" ng-submit="addTask()"><span class="todo">TO DO</span>
-    <a class="btn btn-secondary dropdown-toggle addtask" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a ng-click="show()">
       +
       </a>
-       <div class="dropdown-menu newtask-form">
-         <div id="task_form_block">
-           <form class="formTask" name="formAddTask">
-             <fieldset>
-               <div class="new_task_title">
-                 <!-- <label for="new_task_title">New Task Title</label> -->
-                 <div><input id="new_task_title" type="text" ng-model="new_task.title" placeholder="title"/></div>
-               </div>
 
-               <div class="new_task_desc">
-                 <div><textarea id="new_task_desc" type="text" ng-model="new_task.desc" placeholder="description"/></div>
-               </div>
+      <script type="text/ng-template" id="modal.html">
+               <div class="modal fade">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" ng-click="close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title">Yes or No?</h4>
+                    </div>
+                    <div class="modal-body">
+                      <p>It's your call...</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" ng-click="close('No')" class="btn btn-default" data-dismiss="modal">No</button>
+                      <button type="button" ng-click="close('Yes')" class="btn btn-primary" data-dismiss="modal">Yes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+           </script>
 
-               <div class="new_task_priority">
-                 <div><input id="new_task_priority" type="text" ng-model="new_task.priority" placeholder="priority"/></div>
-               </div>
 
-               <div class="new_task_assignedTo">
-                 <div><input id="new_task_assignedTo" type="text" ng-model="new_task.assignedTo" placeholder="assigned to"/></div>
-               </div>
 
-               <button type="submit">Add Task</button>
-             </fieldset>
-           </form>
+   <div class="dropdown-menu newtask-form">
+     <div id="task_form_block">
+       <form class="formTask" name="formAddTask">
+         <fieldset>
+           <div class="new_task_title">
+             <!-- <label for="new_task_title">New Task Title</label> -->
+             <div><input id="new_task_title" type="text" ng-model="new_task.title" placeholder="title"/></div>
            </div>
-         </div>
-        <!-- </div> -->
-      </div> <!-- end of task form -->
+
+           <div class="new_task_desc">
+             <div><textarea id="new_task_desc" type="text" ng-model="new_task.desc" placeholder="description"/></div>
+           </div>
+
+           <div class="new_task_priority">
+             <div><input id="new_task_priority" type="text" ng-model="new_task.priority" placeholder="priority"/></div>
+           </div>
+
+           <div class="new_task_assignedTo">
+             <div><input id="new_task_assignedTo" type="text" ng-model="new_task.assignedTo" placeholder="assigned to"/></div>
+           </div>
+
+           <button type="submit">Add Task</button>
+         </fieldset>
+       </form>
+       </div>
+     </div>
+    <!-- </div> -->
+  </div> <!-- end of task form -->
 
 
   <div class="singleTask control-group" ng-repeat="task in tasksArray | filter:task.status='__status__toDo__'" ng-swith on=task.>
